feat: JVM 进程监控(Arthas-like) + Token 撤销过滤器 + Jackson 配置集中化
- 新增 JVM 进程监控端点 (jps/jstat/jcmd)，支持多进程发现、堆/GC/线程转储、ECharts 仪表盘
- 新增 TokenRevocationFilter，每次请求检查 Redis 中 token 是否已被强制下线
- JacksonConfig 集中管理 ObjectMapper/JsonMapper (Long→String 序列化)，WebMvcConfig 替换默认 converter
- 移除 AiConfig.java 和 MyBatisPlusConfig 中的冗余 ObjectMapper bean

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>